# currencycore-python

./: .gitignore  .openapi-generator-ignore  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
currencycore/: __init__.py  api_client.py  client.py  configuration.py  exceptions.py  rest.py
docs/: AiResponse.md  ApiError.md  ApiErrorError.md  ConvertResponse.md  ConvertResponseResultsInner.md  ConvertResponseResultsInnerPpp.md  ConvertResponseResultsInnerPppAnyOf.md  ConvertResponseResultsInnerPppAnyOf1.md  CorrelationResponse.md  CorrelationResponseResultsInner.md  CountriesResponseInner.md  CurrenciesResponseInner.md  CurrencyCoreApi.md  DrawdownResponse.md  DrawdownResponseResultsInner.md  HistoryAnalysisResponse.md  HistoryAnalysisResponseResultsInner.md  HistoryAnalysisResponseResultsInnerStats.md  HistoryResponse.md  MeanReversionResponse.md  MeanReversionResponseResultsInner.md  PppAnalysisResponse.md  PppAnalysisResponseResultsInner.md  RatesByBaseResponse.md  RatesByBaseResponsePpp.md  RatesResponse.md  SafeHavenResponse.md  SafeHavenResponseCrisis.md  SafeHavenResponseResultsInner.md  VolatilityResponse.md  VolatilityResponseResultsInner.md
example/: quickstart.py
scripts/: generate.sh
test/: test_ai_response.py  test_api_error.py  test_api_error_error.py  test_convert_response.py  test_convert_response_results_inner.py  test_convert_response_results_inner_ppp.py  test_convert_response_results_inner_ppp_any_of.py  test_convert_response_results_inner_ppp_any_of1.py  test_correlation_response.py  test_countries_response_inner.py  (+21 more)
(+35 files in other folders)
