[project]
name = "currencycore"
version = "0.1.1"
description = "Official CurrencyCore API client - currency conversion, FX rates, PPP, and analytics."
authors = [{ name = "CurrencyCore", email = "dev@currency-core.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["currencycore", "currency", "exchange-rates", "forex", "ppp", "fx", "api", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2.11)",
  "typing-extensions (>=4.7.1)",
]

[project.optional-dependencies]
dev = ["pytest >= 7.2.1"]

[project.urls]
Homepage = "https://currency-core.com"
Repository = "https://github.com/CurrencyCore/currencycore-python"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["currencycore*"]
